--- a/src/components/TransactionList.css
+++ b/src/components/TransactionList.css
@@ -1,6 +1,6 @@
 /* Apply default styles to the whole body */
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Poppins";
     background-color: #f9f9f9;
     margin: 0;
     padding: 0;
