--- a/src/components/TransactionList.css
+++ b/src/components/TransactionList.css
@@ -62,6 +62,26 @@ body {
     border-radius: 4px;
     font-size: 16px;
     width: 700px;
-  }  
+  } 
+ 
+ 
+/* Styling for the buttons to sort transactions */
+.sortButtons {
+    margin-bottom: 20px;
+  }
+  
+  /* Styling for each sort button */
+.sortButtons button {
+    margin-right: 10px;
+    font-size: 16px;
+    padding: 10px 16px;
+    background-color: #f5f5f5;
+    color: #555;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+   
 
   
