Styling for transaction information

--- a/src/components/TransactionList.css
+++ b/src/components/TransactionList.css
@@ -107,6 +107,12 @@ body {
     align-items: center;
     justify-content: space-between;
   }
+
+/* Styling for transaction information */
+.transactionInfo {
+    display: flex;
+    align-items: start;
+  }  
    
 
   
